feat(contributors): restructure to plugin/type/impl three-level hierarchy
- getContributors() now returns Map<plugin, Map<type, impls>> grouped by plugin
- Convert getContributors() to functional stream style with Collectors.toMap
- Add uses PluginDescriptor declaration to module-info
- Update contributors/list JSON-RPC response: [{plugin, contributors:[{type, impls}]}]
- Update VS Code tree provider with three levels: PluginItem > ContributorTypeItem > ContributorImplItem

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>